--- a/BlackDjack/index.html
+++ b/BlackDjack/index.html
@@ -11,23 +11,21 @@
     <div class="gameTable">
         <div class="rowPlayers1">
             <div class="playerTable n1">
-                <h2>Player Name: Vasyl</h2>
+                <h2>Player Name: Vasyl <br> current account:0</h2>
             </div>
             <div class="playerTable n2">
-                <h2>Player Name: Ivan</h2>
+                <h2>Player Name: Ivan <br> current account:0</h2>
             </div>
         </div>
         <div class="rowPlayers2">
             <div class="playerTable n3">
-                <h2>Player Name: Petro</h2>
+                <h2>Player Name: Petro <br> current account:0</h2>
             </div>
             <div class="playerTable n4">
-                <h2>Player Name: Ilya</h2>
+                <h2>Player Name: Ilya <br> current account:0</h2>
             </div>
         </div>
     </div>
-
-
 
 
     <aside class="sideBar">
