--- a/BlackDjack/index.html
+++ b/BlackDjack/index.html
@@ -10,18 +10,30 @@
     <div class="gameTable">
         <div class="rowPlayers1">
             <div class="playerTable n1">
-                <h2>Player Name: <div class="playerName n1">xxx</div> <br> current account:0</h2>
+                <h2>Player Name:
+                    <span class="playerName n1">xxx</span>
+                    <br> current account:<span class="playerRaiting n1">0</span>
+                </h2>
             </div>
             <div class="playerTable n2">
-                <h2>Player Name: <div class="playerName n2">xxx</div> <br> current account:0</h2>
+                <h2>Player Name:
+                    <span class="playerName n2">xxx</span>
+                    <br> current account:<span class="playerRaiting n2">0</span>
+                </h2>
             </div>
         </div>
         <div class="rowPlayers2">
             <div class="playerTable n3">
-                <h2>Player Name: <div class="playerName n3">xxx</div> <br> current account:0</h2>
+                <h2>Player Name:
+                    <span class="playerName n3">xxx</span>
+                    <br> current account:<span class="playerRaiting n3">0</span>
+                </h2>
             </div>
             <div class="playerTable n4">
-                <h2>Player Name: <div class="playerName n4">xxx</div> <br> current account:0</h2>
+                <h2>Player Name:
+                    <span class="playerName n4">xxx</span>
+                    <br> current account:<span class="playerRaiting n4">0</span>
+                </h2>
             </div>
         </div>
     </div>
@@ -35,8 +47,8 @@
 
 
         <div class="buttonContainer">
-            <button>Take card</button>
-            <button>Stop</button>
+            <button class="takeCardButton">Take card</button>
+            <button class="stopGameButton">Stop</button>
         </div>
 
         <div class="startGameContainer">
