update black djack

--- a/BlackDjack/index.html
+++ b/BlackDjack/index.html
@@ -14,12 +14,16 @@
                     <span class="playerName n1">xxx</span>
                     <br> current account:<span class="playerRaiting n1">0</span>
                 </h2>
+
+                <div class="placeStoreCards n1"></div>
             </div>
             <div class="playerTable n2">
                 <h2>Player Name:
                     <span class="playerName n2">xxx</span>
                     <br> current account:<span class="playerRaiting n2">0</span>
                 </h2>
+
+                <div class="placeStoreCards n2"></div>
             </div>
         </div>
         <div class="rowPlayers2">
@@ -28,12 +32,16 @@
                     <span class="playerName n3">xxx</span>
                     <br> current account:<span class="playerRaiting n3">0</span>
                 </h2>
+
+                <div class="placeStoreCards n3"></div>
             </div>
             <div class="playerTable n4">
                 <h2>Player Name:
                     <span class="playerName n4">xxx</span>
                     <br> current account:<span class="playerRaiting n4">0</span>
                 </h2>
+
+                <div class="placeStoreCards n4"></div>
             </div>
         </div>
     </div>
