end visual blackjack

--- a/BlackDjack/index.html
+++ b/BlackDjack/index.html
@@ -69,9 +69,8 @@
 
     </aside>
 
-
     <footer>
-        <h1> FOOTER</h1>
+        <h2 class="messageWindow"> enter player name and click "Start game"</h2>
     </footer>
 
 </div>
