--- a/react_koa_blackjack/server/static/index.html
+++ b/react_koa_blackjack/server/static/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Page Title</title>
 </head>
 <body>
@@ -8,4 +10,3 @@
 <script src="bundle.js"></script>
 </body>
 </html>
-
