--- a/shopify/learnproject2/static/index.html
+++ b/shopify/learnproject2/static/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en"><head><script defer src="bundle.js"></script></head>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script src="cab5236a892c5c01c2ad.js"></script>
+  <base href="/">
+<script defer src="32ea46f415b49f08fa21.bundle.js"></script></head>
 <body>
 <div id="root"></div>
 </body>
